[package]
name = "rust-pwd-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
# For building the CLI interface
clap = { version = "4.0", features = ["derive"] }
# For encryption (AES-256-GCM)
aes-gcm = "0.10.3"
# For hashing the Master Password
argon2 = "0.5.0"
# For converting data to/from JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# To clear sensitive data from RAM
zeroize = { version = "1.7", features = ["derive"] }
# To prevent Password leak onto screen and shell history
rpassword = "7.3"